Seperator added. Style problems with overflow and line-break fixed. More boxes for theoretical testing added.

--- a/style/mainStyle.css
+++ b/style/mainStyle.css
@@ -11,20 +11,21 @@ body {
 div#wrapper {
 	position: relative;
 	margin: auto;
-	width: 1200px;	
+	width: 1200px;
+	white-space: nowrap;
 }
 
 div#frame {
 	overflow: hidden;
-	border: 1px solid black;
+	border: 2px solid black;
 	width: 100%;
 	height: 300px;
-	border-radius: 4px;
+	border-radius: 8px;
 }
 
 div#outerBox {
 	position: relative;
-    animation: mymove 20s 1;
+    animation: mymove 200s 1;
     -webkit-animation: mymove 200s 1;  /* Chrome, Safari, Opera */
     animation-fill-mode: forwards;
     -webkit-animation-fill-mode: forwards; /* Chrome, Safari, Opera */
@@ -32,37 +33,57 @@ div#outerBox {
 	-webkit-animation-timing-function: linear;
 }
 
+div#outerBox > div { /* Targets all divs one level inside outerBox */
+	/* border: 1px solid black; */
+	display: inline-block;
+}
+
 div#box1 {
 	background: orange;
 	width: 200px;
 	height: 300px;
-	border: 1px solid black;
-	display: inline-block;
 }
 
 div#box2 {
 	background: green;
-	width: 500px;
+	width: 400px;
 	height: 300px;
-	border: 1px solid black;
-	display: inline-block;
 }
 
 div#box3 {
 	background: blue;
 	width: 400px;
 	height: 300px;
-	border: 1px solid black;
-	display: inline-block;
+}
+
+div#box4 {
+	background: purple;
+	width: 200px;
+	height: 300px;
+}
+
+div#box5 {
+	background: yellow;
+	width: 600px;
+	height: 300px;
+}
+
+
+
+img#seperator {
+	position:absolute;
+	top: -7px;
+	left: 200px;
+	z-index:1;
 }
 
 /* Chrome, Safari, Opera */
 @-webkit-keyframes mymove {
-    from {right: 0px;}
-    to {right: 200px;}
+    from {right: -208px;}
+    to {right: 1800px;} /* Lengt of animation in pixels */
 }
 
 @keyframes mymove {
-    from {right: 0px;}
-    to {right: 200px;}
+    from {right: -208px;}
+    to {right: 1800px;} /* Lenght of animation in pixels */
 }
